# CineFusion

./: .env.sample  .gitignore  PROJECT_OVERVIEW.md  README.md  config.json  config.production.json  docker-compose.yml  homepage.html  index.html  login.html  nginx-proxy.conf  package.json  requirements.txt  run.py  start_server.bat  start_server.sh  style.css
.github/workflows/: ci.yml
Backend/: .dockerignore  Dockerfile  README.md  config.py  logger.py  main.py  monitoring.py  pyproject.toml  requirements.txt  server.py  test.py  test_unit.py
Backend/data/: config.json
Backend/process/: avl.py  trie 2.0.py  trie.py
Frontend/: .dockerignore  Dockerfile  README.md  app.html  index.html  nginx.conf  openapi.json  script.js  styles.css
Frontend/css/: homestyle.css  style.css
Frontend/html/: homepage.html  login.html  signup.html
Frontend/js/: backdrop.js  password.js  search.js  verification.js
ads_package/process/: BrowserHistory.txt  avl.py  trie.py
ads_package/website/: login.html
ads_package/website/script/: backdrop.js  verification.js
ads_package/website/styles/: style.css
css/: homestyle.css  style.css
html/: homepage.html  login.html  signup.html
js/: verification.js
process/: Autocomplete.txt
