[project]
name = "CineFusion-Backend"
version = "1.0.0"
description = "A modern movie search and recommendation API with intelligent autocompletion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "psutil>=7.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
